add food functionality

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,7 @@
  *= require_self
  */
 
-*{
+* {
   padding: 0;
   margin: 0;
 }
@@ -36,7 +36,6 @@ body {
 }
 
 .foodTable {
-
   margin: 0 1.5rem 0 1.5rem;
   margin-top: 4rem;
   display: flex;
@@ -47,7 +46,7 @@ body {
 .foodTableHeading {
   background-color: rgb(112, 112, 109);
   display: grid;
-  grid-template-columns: repeat(2,30fr) 25fr 15fr;
+  grid-template-columns: repeat(2, 30fr) 25fr 15fr;
 }
 
 .foodTableHeading div,
@@ -58,9 +57,22 @@ body {
 
 .foodTableBody {
   display: grid;
-  grid-template-columns: repeat(2,30fr) 25fr 15fr;
+  grid-template-columns: repeat(2, 30fr) 25fr 15fr;
 }
 
 .foodTableBody div {
   padding: 0.5rem 0 0.5rem 4px;
+}
+
+.noFoodTableSms {
+  display: flex;
+  color: red;
+  justify-content: center;
+}
+
+/* Form */
+.formSection {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
