--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,7 +25,9 @@ body {
   margin: 1.5rem;
 }
 
-.foodsContainer {
+.foodsContainer
+.recipeItemContainer
+ {
   display: flex;
   flex-direction: column;
 }
@@ -75,4 +77,38 @@ body {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+}
+
+.headerItem {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1rem;
+}
+
+.recipeDesciption {
+display: flex;
+flex-direction: column;
+gap:1rem;
+}
+
+#recipePrepTimeAndstates,
+.recipeActions {
+  display: flex;
+  justify-content: space-between;
+}
+
+.recipeActions {
+margin: 2rem 0 1rem  0;
+}
+
+/* .recipe {
+margin-top: 1rem;
+} */
+
+hr {
+  margin: 0 2rem 0 2rem;
+}
+
+.togle{
+  background-image: url("../images/togleOff.svg");
 }
