--- a/app/views/recipes/_actions.html.erb
+++ b/app/views/recipes/_actions.html.erb
@@ -1,5 +1,5 @@
   <div class="recipeActions">
-  <a href="#">
+  <a href="/general_shopping_list">
   <button type="button">Generate Shopping List</button>
   </a>
   <%if current_user.id==recipe.user_id %>
