--- a/app/views/public_recipes/index.html.erb
+++ b/app/views/public_recipes/index.html.erb
@@ -1,19 +1,2 @@
-<h1>Public recipes list</h1>
-<% if @recipes.empty? %>
-  <p>No public recipes for the moment!</p>
-<% else %>
-<ul>
-  <% @recipes.each do |recipe| %>
-    <li>
-      <%= link_to recipe_path(recipe.id) do %>
-        <div>
-          <p><%= recipe.name %> by <%= recipe.user.name %></p>
-        </div>
-        <div>
-          <p><%= recipe.description %></p>
-        </div>
-      <% end %>
-    </li>
-  <% end %>
-</ul>
-<% end %>
+<h1>PublicRecipes#index</h1>
+<p>Find me in app/views/public_recipes/index.html.erb</p>
