--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,82 +11,42 @@
   </head>
 
   <body>
-    <%= render partial: "layouts/navbar" %>
+    <nav>
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+      <ul>
+        <% if user_signed_in? %>
+          <li>
+          <%= link_to 'Recipe App', authenticated_root_path %>
+          </li>
 
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+          <li>
+            <%= link_to 'Foods', foods_path %>
+          </li>
+
+          <li>
+            <%= link_to 'Recipies', recipes_path %>
+          </li>
+
+          <li>
+            <%= link_to 'Public Recipies', public_recipes_path %>
+          </li>
+
+          <li>
+            <%= link_to 'Inventories', inventories_path %>
+          </li>
+
+          <li>
+            <p>Hi <%= current_user.name %></p>
+          </li>
+
+          <li>
+            <%= link_to 'Sign Out', destroy_user_session_path , method: :delete %>
+          </li>
+        <% end %>
+      </ul>
+    </nav>
 
     <%= yield %>
-
-    <script>
-  // Get the modal elements
-  var recipeModal = document.getElementById('recipeModal');
-  var inventoryModal = document.getElementById('inventoryModal');
-
-  // Get the button elements that open the modals
-  var openRecipeModalBtn = document.getElementById('openRecipeModal');
-  var openInventoryModalBtn = document.getElementById('openInventoryModal');
-
-  // Function to open the recipe modal
-  openRecipeModalBtn.onclick = function() {
-    recipeModal.style.display = 'block';
-  }
-
-  // Function to open the inventory modal
-  openInventoryModalBtn.onclick = function() {
-    inventoryModal.style.display = 'block';
-  }
-
-  // Function to close the modals
-  function closeModal(modal) {
-    modal.style.display = 'none';
-  }
-
-  // Close the modals when the 'x' is clicked
-  recipeModal.querySelector('span').onclick = function() {
-    closeModal(recipeModal);
-  }
-
-  inventoryModal.querySelector('span').onclick = function() {
-    closeModal(inventoryModal);
-  }
-
-  // Close the modals when clicking outside the content area
-  window.onclick = function(event) {
-    if (event.target == recipeModal || event.target == inventoryModal) {
-      closeModal(recipeModal);
-      closeModal(inventoryModal);
-    }
-  }
-</script>
-
-<script>
-  document.addEventListener("DOMContentLoaded", function() {
-  var addFoodLink = document.getElementById("add-food-link");
-  var popupModal = document.getElementById("popup-modal");
-
-  if (!addFoodLink || !popupModal) {
-    console.error("Missing required elements");
-    return;
-  }
-
-  // Show the modal when the "Add Food" link is clicked
-  addFoodLink.addEventListener("click", function() {
-    console.log("Add Food link clicked");
-    popupModal.style.display = "block";
-  });
-
-  // Hide the modal when the "x" button inside the modal is clicked
-  var closeButton = popupModal.querySelector("span");
-  if (closeButton) {
-    closeButton.addEventListener("click", function() {
-      console.log("Close button clicked");
-      popupModal.style.display = "none";
-    });
-  } else {
-    console.error("Close button not found");
-  }
-});
-</script>
   </body>
 </html>
