--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,20 +14,48 @@
  *= require_self
  */
 
-* {
+ * {
   padding: 0;
   margin: 0;
 }
 
-body {
+/* body {
+} */
+
+.container {
+  
   display: flex;
   flex-direction: column;
   margin: 1.5rem;
+  margin-top: 4rem;
+}
+
+.appHeader{
+position: fixed;
+top: 0;
+width: 100%;
+height: 1rem;
+/* background-color: red; */
+display: flex;
+flex-direction: column;
+}
+
+.logo{
+  display: flex;
+  justify-content: flex-start;
+}
+
+.appHeader nav{
+display:flex;
+justify-content: flex-end;
+gap:8px;
+padding: 5px 0 5px 0;
 }
 
 .foodsContainer,
 .recipeItemContainer,
-.shoppingItemContainer {
+.shoppingItemContainer,
+.recipesListContainer {
   display: flex;
   flex-direction: column;
 }
@@ -130,4 +158,23 @@ hr {
 
 .togle {
   background-image: url("../images/togleOff.svg");
+}
+
+.recipesListContainer {
+  margin: 1rem 4rem 1rem 4rem;
+  gap: 1rem;
+}
+
+.recipesItemContainer {
+  display: grid;
+  grid-template-columns: 20fr 80fr;
+  column-gap: 1rem;
+  border: solid 1px black;
+  padding: 1rem;
+}
+
+.recipeHeaderAndAction {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
