--- a/app/views/recipes/_description.html.erb
+++ b/app/views/recipes/_description.html.erb
@@ -1,7 +1,7 @@
 <div class="recipeDesciption">
   <div id="recipePrepTimeAndstates">
     <h3>Preparation time: <%=recipe.preparation_time%> <%=recipe.preparation_time>1?"hours":"hour"%></h3>
-    <h3>Public: <a href=<%="/recipes/#{recipe.id}/visibity"%> ><button id="togle"><%=recipe.public %></button> </a></h3>
+    <h3>Public:<a href=<%="/recipes/#{recipe.id}/visibity"%> ><button><%=recipe.public %></button> </a></h3>
   </div>
 
   <div>
