--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,1 +1,9 @@
-<h1>Will display all the recipes</h1>
+<section class="recipesListContainer">
+<% if (@current_user_recipes.size>0) %>
+<% @current_user_recipes.each do |recipe_item|%>
+<%= render partial:"recipes/recipe_item", locals: {recipe_item:recipe_item} %>
+<% end %>
+<% else %>
+ <%= render partial:"foods/no_food"%>
+<% end %>
+</section>
