--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,17 @@
-<h1>For all new Recipes</h1>
+<section class="recipeItemContainer">
+<%= render partial:"layouts/header", locals:{header:@recipe.name}%>
+<%= render partial:"recipes/description", locals:{recipe:@recipe}%>
+<%= render partial:"recipes/actions", locals:{recipe:@recipe}%>
+<hr>
+
+<div class="foodTable">
+<%= render partial:"recipes/foods_header"%>
+<% if (@recipe_items.size>0) %>
+<%@recipe_items.each_with_index do |recipe_item, index|%>
+<%= render partial:"recipes/food_recipe_item", locals: {food_item:recipe_item} %>
+<% end %>
+<% else %>
+ <%= render partial:"foods/no_food"%>
+<% end %>
+</div>
+</section>
