--- a/app/views/recipe_foods/new.html.erb
+++ b/app/views/recipe_foods/new.html.erb
@@ -4,6 +4,6 @@
     <%= form.hidden_field :recipe_id, value:@recipe.id %>
     <label for="foods">Select a Food</label>
     <%= form.select :food_id, options_for_select(@foods.map { |food| [food.name, food.id] }), {}, { id: 'food' } %>
-    <%= form.submit "Create" %>
+    <%= form.submit "Add to Recipe" %>
   <% end %>
 </section>
