--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -60,7 +60,8 @@ padding: 5px 0 5px 0;
   flex-direction: column;
 }
 
-.addFood {
+.addFood,
+.newRecipe {
   display: flex;
   justify-content: flex-end;
 }
