add style to app

--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,5 +1,7 @@
 <header class="appHeader">
-<div class="logo">Logo</div>
+<div class="logo">
+<%= link_to (image_tag "cooker.svg", alt: "User Image"), root_path%>
+</div>
 <nav>
 <%= link_to "Foods", foods_path %>
 <%= link_to "Recipes", recipes_path %>
