--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,5 +19,11 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
   </div>
+  
+    <%if current_user%>
+<footer>
+  <h3>Your Lovely Recipe App</h3>
+</footer>
+<%end%>
   </body>
 </html>
