--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,7 +1,7 @@
 <section class="recipesListContainer">
 <div class="newRecipe">
 <a href="/recipes/new">
-<button type="button">new Recipe</button>
+<button type="button">Add Recipe</button>
 </a>
 </div>
 <% if (@current_user_recipes.size>0) %>
