--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap');
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -17,17 +18,17 @@
  * {
   padding: 0;
   margin: 0;
+  text-decoration: none;
+  font-family: 'Raleway', sans-serif;
 }
 
-/* body {
-} */
 
 .container {
   
   display: flex;
   flex-direction: column;
   margin: 1.5rem;
-  margin-top: 4rem;
+  margin-top: 10rem;
 }
 
 .appHeader{
@@ -35,7 +36,6 @@ position: fixed;
 top: 0;
 width: 100%;
 height: 1rem;
-/* background-color: red; */
 display: flex;
 flex-direction: column;
 }
@@ -43,13 +43,26 @@ flex-direction: column;
 .logo{
   display: flex;
   justify-content: flex-start;
+  width: 50px;
+  height: 50px;
+}
+
+.logo img {
+  width:100%;
+  height:100%;
+  cursor: pointer;
 }
 
 .appHeader nav{
 display:flex;
 justify-content: flex-end;
 gap:8px;
-padding: 5px 0 5px 0;
+padding: 5px 5px 5px 0;
+}
+
+.appHeader nav a {
+  color: black;
+  font-weight: 600;
 }
 
 .foodsContainer,
@@ -149,9 +162,26 @@ padding: 5px 0 5px 0;
   margin: 2rem 0 1rem  0;
 }
 
-/* .recipe {
-margin-top: 1rem;
-} */
+.formSection form input,
+.formSection form textarea,
+.formSection form select {
+  padding: 0.8rem;
+  border-radius: 8px;
+}
+
+button,
+.btnSubmit {
+  padding: 1rem;
+  border: transparent;
+  border-radius: 8px;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+.btnSubmit {
+  background-color: black;
+  color: white;
+}
 
 hr {
   margin: 0 2rem 0 2rem;
@@ -178,4 +208,11 @@ hr {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 2rem;
+  margin-top: 5rem;
 }
