--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -4,6 +4,6 @@
     <%= form.text_field :measurement_unit, placeholder:"Measurement unit" %>
     <%= form.number_field :price, placeholder:"Price", min:0, step:"any" %>
     <%= form.number_field :quantity, placeholder:"Quantity", min:0%>
-    <%= form.submit "Create" %>
+    <%= form.submit "Create", class:"btnSubmit" %>
   <% end %>
 </section>
